--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <!-- Header -->
-  <nav class="navbar">++++
+  <nav class="navbar">
     <div class="max-width">
       <div class="logo"><a href="#"><span>iamNeeha</span></a></div>
       <ul class="menu">
