--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Header -->
   <nav class="navbar">
     <div class="max-width">
-      <div class="logo"><a href="#"><span>iamNeeha</span></a></div>
+      <div class="logo"><a href="#"><span>i am Neeha</span></a></div>
       <ul class="menu">
         <li><a href="#home" class="menu-btn"><strong>Home</strong></a></li>
         <li><a href="#about" class="menu-btn"><strong>About</strong></a></li>
@@ -60,7 +60,7 @@
           <img src="Me2.jpg" alt="Profile Image 626x626">
         </div>
         <div class="column right">
-          <div class="text">I'm  Neeha ghosh,<span class="typing-2"></span></div>
+          <div class="text">I'm,<span class="typing-2"></span></div>
           <p>
             To seek oppurtunity as a Software Engineer Intern to apply my programming skills
             ,mathematics and interpersonal skills forpersonal development as well as
