--- a/index.html
+++ b/index.html
@@ -124,18 +124,6 @@
           <p>Python, JavaScript</p>
           <br>
 
-         <div class="text">ACHIEVEMENTS</div>
-          <p>
-          <ul>
-            <li class="project">Obtained an 83.9% score on the Oracle Certified Associate, Java SE 8 Programmer exam (1Z0-808).
-            </li>
-            <li class="project">Won the 2nd runners up in the ExQuizIT-2022 (Exclusive Quiz in Information Technology)
-              competition
-              organized by the Department of Computer Application at SIT, showcasing knowledge and expertise in
-              various IT topics.</li>
-          </ul>
-          </p>
-          <br>
           <div class="text">HOBBIES</div>
           <p>
           <ul>
@@ -155,7 +143,7 @@
       <div class="carousel owl-carousel">
         <div class="card"> 
           <div class="box">
-            <img src="pic1.png" alt=pic1"">
+            <img src="pic1.png" alt="">
             <div class="text">Temperature Converter Webpage</div>
             <p>
               <b>Technologies used:</b> HTML, CSS, JavaScript <br><br>
@@ -170,7 +158,7 @@
         </div>
         <div class="card">
           <div class="box">
-            <img src="pic2.webp" alt="pic2">
+            <img src="pic2.webp" alt="">
             <div class="text">Portfolio</div>
             <p>
               <b>Technologies used:</b> HTML, CSS, Bootstrap, JavaScript <br><br>
