--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <div class="card">
           <div class="box">
-            <img src="pic3.webp" alt="pic3">
+            <img src="pic3.webp" alt="">
             <div class="text">Registration Form</div>
             <p>
               <b>Technologies used:</b> HTML, CSS, Bootstrap, JavaScript. <br><br>
