--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="carousel owl-carousel">
         <div class="card"> 
           <div class="box">
-            <img src="pic1.png" alt="">
+            <img src="Photo1.jpg" alt="">
             <div class="text">Temperature Converter Webpage</div>
             <p>
               <b>Technologies used:</b> HTML, CSS, JavaScript <br><br>
@@ -158,7 +158,7 @@
         </div>
         <div class="card">
           <div class="box">
-            <img src="pic2.webp" alt="">
+            <img src="Photo2.jpg" alt="">
             <div class="text">Portfolio</div>
             <p>
               <b>Technologies used:</b> HTML, CSS, Bootstrap, JavaScript <br><br>
@@ -175,7 +175,7 @@
 
         <div class="card">
           <div class="box">
-            <img src="pic3.webp" alt="">
+            <img src="Photo3.jpg" alt="">
             <div class="text">Registration Form</div>
             <p>
               <b>Technologies used:</b> HTML, CSS, Bootstrap, JavaScript. <br><br>
